<resources>
    <!-- App Identifiers -->
    <string name="app_name">ICAN</string>
    <string name="version_number">Version 0.1.0 © Bramble LLC</string>

    <!-- labels -->
    <string name="no_news">You have no news.</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="log_in">LOG IN</string>
    <string name="logging_in">LOGGING IN</string>
    <string name="forgot_log_in">Forgot your password?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signing_up">SIGNING UP</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone_number">phone number</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_language_prefs">Change language preference</string>
    <string name="news_feed">News Feed</string>
    <string name="message_prefs">Change notification preferences</string>

    <!-- material dialog text -->
    <string name="log_out_confirmation">Are you sure you would like to log out?</string>
    <string name="change_phone">CHANGE PHONE NUMBER</string>
    <string name="change_phone_text">Enter in your current phone number so we can text you if there is an urgent alert.</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="change_languages_text">Choose your preferred language to receive notifications in.</string>
    <string name="receive_emails">Receive emails</string>
    <string name="receive_news_texts">Receive texts about events</string>
    <string name="msg_prefs_title">NOTIFICATION PREFERENCES</string>
    <string name="contact_ican_it">CONTACT ICAN IT</string>
    <string name="contact_ican_text">Would you like to call an admin at ican in order to reset your password?</string>
    <string name="help_text">Would you like to call an ican associated to help you?</string>

    <string-array name="messeges_list">
        <item>@string/receive_emails</item>
        <item>@string/receive_news_texts</item>
    </string-array>

    <!-- log in error toasts -->
    <string name="log_in_empty_credentials">Enter your email or password.</string>
    <string name="log_in_invalid_credentials">Invalid email or password.</string>

    <!-- sign up error toasts -->
    <string name="sign_up_credentials_empty_username_error">Please enter your desired username.</string>
    <string name="sign_up_credentials_empty_password_error">Please enter your desired password.</string>
    <string name="sign_up_credentials_empty_phone_number_error">Please enter your current mobile phone number.</string>
    <string name="sign_up_credentials_empty_email_error">Please enter your email address.</string>
    <string name="sign_up_credentials_empty_first_name_error">Please enter your first name.</string>
    <string name="sign_up_credentials_empty_last_name_error">Please enter your last name.</string>
    <string name="sign_up_credentials_invalid_email_error">Please enter a valid email address.</string>
    <string name="sign_up_credentials_invalid_password_characters_error">Passwords may only contain letters, numbers, and the special characters !@#$%^&amp;*-_.</string>
    <string name="sign_up_credentials_invalid_password_length_error">Passwords must be between 6 and 20 characters in length.</string>
    <string name="sign_up_credentials_invalid_username_error">Usernames may only contain letters, numbers, and underscores (_).</string>


    <string name="test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.
        Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
        imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.
        Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora
        torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero.
    </string>

</resources>
